tools/cdk8s/dist/production/app-production.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-production-deployment-c8336633
  namespace: production
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: my-app-config
          image: nginx:1.21.6
          name: app-container
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
              readOnly: true
      volumes:
        - configMap:
            name: my-app-config
          name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: production
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: my-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: production
spec:
  rules:
    - host: myapp-prod.example.com
      http:
        paths:
          - backend:
              service:
                name: my-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
